third_party/move/move-compiler-v2/tests/checking/positional_fields/named_tuple_ability_decl_invalid1.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/positional_fields/named_tuple_ability_decl_invalid1.move:2:23
  │
2 │     struct S has copy ();
  │                       ^
  │                       │
  │                       Unexpected '('
  │                       Expected one of: ',', '{', or ';'
